--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
         <div class='topbar'>
             <h1>I AM HEADER</h1>
+            <ul class='linkList'>
+                <li><a>link</a></li>
+                <li><a>link</a></li>
+                <li><a>link</a></li>
+
+            </ul>
         </div>
 </head>
     <body id='body'>
@@ -21,7 +27,15 @@
             <h1>I AM ON THE LEFT</h1>
             <img src='http://res.cloudinary.com/flyakite/image/upload/v1514431823/download_3_ja5f6a.png'/>
         </div>
+<svg class='svg-holder' width="300px" height="1000" version="1.1" xmlns="http://www.w3.org/2000/svg">
+    <path
+        id='path1' 
+        d= ''
+        fill="blue" 
+        stroke="black" 
+        stroke-width="2" />
 
+</svg>
         <div class='right'>
 
             <h1>I AM ON THE RIGHT</h1>
