--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
         stroke="black" 
         stroke-width="2" />
 
+        <path
+        id='path2' 
+        d= ''
+        fill="red" 
+        stroke="black" 
+        stroke-width="2" />
+
 </svg>
         <div class='right'>
 
