positioned in the middle

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://use.fontawesome.com/5b61570599.js"></script>
     <title>Artem Kharshan</title>
+     
+    <link rel="stylesheet" href="application.css">
     <link rel="stylesheet" href="index.scss">
     <script src="main.js"></script>
 
         <div class='topbar'>
             <h1>I AM HEADER</h1>
             <ul class='linkList'>
-                <li><a>link</a></li>
-                <li><a>link</a></li>
-                <li><a>link</a></li>
+                <li><a href='#'>link</a></li>
+                <li><a href='#'>link</a></li>
+                <li><a href='#'>link</a></li>
 
             </ul>
         </div>
@@ -27,7 +29,11 @@
             <h1>I AM ON THE LEFT</h1>
             <img src='http://res.cloudinary.com/flyakite/image/upload/v1514431823/download_3_ja5f6a.png'/>
         </div>
-<svg class='svg-holder' width="300px" height="1000" version="1.1" xmlns="http://www.w3.org/2000/svg">
+
+   
+
+    <div class='svg-shrinker'>
+<svg class='svg-holder' width="300px" height="1000px" viewBox="0 0 300 1000" preserveAspectRatio=none version="1.1" xmlns="http://www.w3.org/2000/svg">
     <path
         id='path1' 
         d= ''
@@ -43,13 +49,14 @@
         stroke-width="2" />
 
 </svg>
+</div>
         <div class='right'>
 
             <h1>I AM ON THE RIGHT</h1>
             <ul>
-                <li>I MIGHT BE A PROJECT</li>
-                <li>I MIGHT BE A PROJECT</li>
-                <li>I MIGHT BE A PROJECT</li>
+                <li><a href='#'>I MIGHT BE A PROJECT</a></li>
+                <li><a href='#'>I MIGHT BE A PROJECT</a></li>
+                <li><a href='#'>I MIGHT BE A PROJECT</a></li>
             </ul>
         </div>
     </main>
