svg a bit animated, almost proof of concept. I need to figure out how to animate the crests how I want to

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class='main'>
         <div class='left'>
             <h1>I AM ON THE LEFT</h1>
-            <img src='http://res.cloudinary.com/flyakite/image/upload/v1514431823/download_3_ja5f6a.png'/>
+            <img src='http://res.cloudinary.com/flyakite/image/upload/e_grayscale/v1514431823/download_3_ja5f6a.png'/>
         </div>
 
    
@@ -37,14 +37,14 @@
     <path
         id='path1' 
         d= ''
-        fill="blue" 
-        stroke="black" 
+        fill="rgba(192,192,192,0.3)" 
+        stroke="blue" 
         stroke-width="2" />
 
         <path
         id='path2' 
         d= ''
-        fill="red" 
+        fill="rgba(255,255,0,0.3)" 
         stroke="black" 
         stroke-width="2" />
 
