dynamically loading project data

--- a/public/index.html
+++ b/public/index.html
@@ -102,21 +102,17 @@
 
 <li class='template' id='projectTemplate'>
     <div id='project-modal' class='project-modal'>
-        <ul>
-            <li>
-                <h2></h2>
-            </li>
+        <ul id='points'>
+
         </ul>
-        <a href=''>live</a>
-        <a href=''>source</a>
+        <a id='live' href=''>live</a>
+        <a id='source' href=''>source</a>
     </div>
     <div class='project-holder'>
-        <a href='#'>
             <img src='' />
-        </a>
         <span>
-            <h1 id='title'></h1>
-            <h2 id='header'></h2>
+            <h1 class='title'></h1>
+            <h2 class='header'></h2>
         </span>
     </div>
 
