some more styling

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
     </div>
     <div class='project-holder'>
             <img src='' />
-        <span>
+        <span class='title-header'>
             <h1 class='title'></h1>
             <h2 class='header'></h2>
         </span>
