seperators and sizeing

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
             </div>
 
             <div class='right about' id='about'>
+                <!-- <span class='seperator'>ARTEM KHARSHAN</span> -->
                 <div>
                     <h1> I AM TIM</h1>
                     <h2> I MAKE CODE SOMETIMES</h2>
@@ -54,47 +55,11 @@
                 <h1> some kind of tagline and a link to <a href='#'> contact</a></h1>
             </div>
         </main>
+        <span class='seperator'>PORTFOLIO</span>
         <main>
-
-                <ul id='projects' class='project-list'>
-                    <li>
-                
-                        <div class='project-modal'>
-                            <ul>
-                                <li>
-                                    <h2>REACT</h2>
-                                </li>
-                                <li>
-                                    <h2>RUBY ON RAILS</h2>
-                                </li>
-                                <li>
-                                    <h2>SQL</h2>
-                                </li>
-                                <li>
-                                    <h2>SKILLS</h2>
-                                </li>
-                                <li>
-                                    <h2>TALENT</h2>
-                                </li>
-                            </ul>
-                            <a href=''>live</a>
-                            <a href=''>source</a>
-                        </div>
-                        <div class='project-holder'>
-                            <a href='#'>
-                                <img src='http://res.cloudinary.com/flyakite/image/upload/v1514414844/search_rifri5.png' />
-                            </a>
-                            <span>
-                                <h1>FLYaKITE</h1>
-                                <h2>a FullStack EventBrite clone</h2>
-                            </span>
-                            <button class='burger-button'>. . .</button>
-                        </div>
-                
-                    </li>
-                </ul>
-
-            </main>
+            <ul id='projects' class='project-list'>
+            </ul>
+        </main>
     </div>
 </body>
 
