--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
                     <a href='#projects'>Projects</a>
                 </li>
                 <li>
-                    <a href='#'>Contact</a>
+                    <a href='#resume'>resume</a>
                 </li>
                 <li>
-                    <a href='#'>resume</a>
+                    <a href='#'>Contact</a>
                 </li>
         
             </ul>
@@ -59,6 +59,10 @@
         <main>
             <ul id='projects' class='project-list'>
             </ul>
+        </main>
+        <span class='seperator'>PORTFOLIO</span>
+        <main id='resume'>
+            resume
         </main>
     </div>
 </body>
