--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
                     <a href='#projects'>Projects</a>
                 </li>
                 <li>
+                    <a href='#skills'>skills</a>
+                </li>
+                <li>
                     <a href='#resume'>resume</a>
                 </li>
                 <li>
@@ -60,7 +63,14 @@
             <ul id='projects' class='project-list'>
             </ul>
         </main>
-        <span class='seperator'>PORTFOLIO</span>
+        <span class='seperator'>SKILLS</span>
+        <main id='skills'>
+            <div>JAVASCRIPT</div>
+            <div>RUBY</div>
+            <div>FAMILIAR</div>
+            <div>OTHER</div>
+        </main>
+        <span class='seperator'>RESUME</span>
         <main id='resume'>
             resume
         </main>
