sidebar styling and front page lines

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class='unsidebar'>
-        <main class='main'>
+        <main class='main first-main'>
             <div class='left'>
                 <img src='http://res.cloudinary.com/flyakite/image/upload/e_grayscale/v1514431823/download_3_ja5f6a.png'/>
             </div>
@@ -52,8 +52,12 @@
             <div class='right about' id='about'>
                 <!-- <span class='seperator'>ARTEM KHARSHAN</span> -->
                 <div>
-                    <h1> I AM TIM</h1>
-                    <h2> I MAKE CODE SOMETIMES</h2>
+                    <h4>Artem Kharshan</h4>
+                    <h5>Software Developer</h5>
+                </div>
+                <div>
+                    <span><h1>I want to Make things <h2> Work</h2></h1></span>
+                <span><h1>and make things <h3> Better</h3></h2></span>
                 </div>
                 <h1> some kind of tagline and a link to <a href='#'> contact</a></h1>
             </div>
