--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                 to improve lives and find new Solutions. 
             </p>
             <br></br>
-            <p>I've worked in Ruby, Javascript, C#, HTML5/CSS3, Rails, React/Redux and Vue. if something needs to happen, I feel responsible
+            <p>I've worked in Ruby, Javascript, HTML5/CSS3, Rails, React/Redux and Vue. if something needs to happen, I feel responsible
             for getting it done, getting it right, and helping who I can in the process. I'm self motivated with a good strategic sense
             of organization and a passion for my work but also thrive being delegated tasks to support my team. I believe in communication,
             negotiation, and an appreciation for the bigger picture of being partners trying to build the best we can.</p>    
@@ -223,8 +223,11 @@
         <ul id='points'>
 
         </ul>
-        <a id='live' href=''>live</a>
-        <a id='source' href=''>source</a>
+        <div class='modal-a-holder'>
+            <a id='live' href=''>live</a>
+            <a id='source' href=''>source</a>
+        </div>
+
     </div>
     <div class='project-holder'>
             <img src='' />
