--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
                 </div>
                 <div class='skilllist'>
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515972970/webpack_kmotjp.svg' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/c_scale,h_600,q_66,w_600/v1515972970/webpack_kmotjp.png'/>
                         <h1>Webpack</h1>
                     </div>
 
@@ -203,9 +203,9 @@
             <ul class='contact-list'>
                 
                 <br></br>
-                <li><i class="fa fa-github"></i><a href='#'> github</a></li>
+                <li><i class="fa fa-github"></i><a href='#'> Github</a></li>
                 <br></br>
-                <li><i class="fa fa-linkedin-square" ></i><a href='#'> linkedIn</a></li>
+                <li><i class="fa fa-linkedin-square" ></i><a href='#'> LinkedIn</a></li>
                 <br></br>
                 <li><i class="fa fa-envelope"></i><a href='mailto:TimKharshan@hotmail.com'> TimKharshan@hotmail.com</a></li>
 
