down quality of some images, dlled personal pic

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <div class='unsidebar'>
         <main class='main first-main'>
             <div class='left'>
-                <img src='http://res.cloudinary.com/flyakite/image/upload/v1515974361/download_1_hkqjua.png'/>
+                <img src='assets/me.png'/>
             </div>
 
             <div class='right about' >
@@ -100,27 +100,27 @@
                 </div>
                 <div class='skilllist'>
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515972703/react-hexagon_ckiblx.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515972703/react-hexagon_ckiblx.png' />
                         <h1>React</h1>
                     </div>
 
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/v1515973244/Microsoft.VisualStudio.Services.Icons_gxtrrg.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60/v1515973244/Microsoft.VisualStudio.Services.Icons_gxtrrg.png' />
                         <h1>Vue</h1>
                     </div>
 
                     <div>
-                        <img src='https://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515971283/command_language_software_develop_code_programming_javascript_icon_d8p7jh.png'/>
+                        <img src='https://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515971283/command_language_software_develop_code_programming_javascript_icon_d8p7jh.png'/>
                         <h1>Javascript</h1>
                     </div>
 
                     <div>
-                        <img src='https://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515971283/jquery_language_code_programming_develop_javascript_framework_icon_a3pu6r.png' />
+                        <img src='https://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515971283/jquery_language_code_programming_develop_javascript_framework_icon_a3pu6r.png' />
                         <h1>JQuery</h1>
                     </div>
 
                     <div>
-                        <img src='https://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515971102/css3_w1gdlc.png'
+                        <img src='https://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515971102/css3_w1gdlc.png'
                         />
                         <h1>CSS</h1>
                     </div>
@@ -135,27 +135,27 @@
                 </div>
                 <div class='skilllist'>
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515972294/download_byjz7c.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515972294/download_byjz7c.png' />
                         <h1>PostgreSQL</h1>
                     </div>
 
                     <div>
-                        <img src='https://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515971102/rails_dxo2y3.png' />
+                        <img src='https://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515971102/rails_dxo2y3.png' />
                         <h1>Rails</h1>
                     </div>
 
                     <div>
-                        <img src='https://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515971103/ruby_abyei7.png' />
+                        <img src='https://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515971103/ruby_abyei7.png' />
                         <h1>Ruby</h1>
                     </div>
                     
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515972837/687474703a2f2f617070732e6f63746f636f6e73756c74696e672e636f6d2f696d616765732f6578707265737349636f6e2e706e67_kye8yi.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515972837/687474703a2f2f617070732e6f63746f636f6e73756c74696e672e636f6d2f696d616765732f6578707265737349636f6e2e706e67_kye8yi.png' />
                         <h1>Express</h1>
                     </div>
 
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/c_crop,h_648,w_648/v1515972307/nodejslogo_1_i0kqek.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,c_crop,h_648,w_648/v1515972307/nodejslogo_1_i0kqek.png' />
                         <h1>Node</h1>
                     </div>
                 </div>
@@ -172,22 +172,22 @@
                     </div>
 
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515972989/extention_file_type_black_115-512_samtce.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515972989/extention_file_type_black_115-512_samtce.png' />
                         <h1>Bash</h1>
                     </div>
 
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515972979/25231_eapocg.svg' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515972979/25231_eapocg.svg' />
                         <h1>Github</h1>
                     </div>
 
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/c_crop,h_648,w_648/v1515972995/jestlogo_idh6ze.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,c_crop,h_648,w_648/v1515972995/jestlogo_idh6ze.png' />
                         <h1>Jest</h1>
                     </div>
 
                     <div>
-                        <img src='http://res.cloudinary.com/flyakite/image/upload/h_648,w_648/v1515973002/f6177ff2a47408c67c2f4a556c52e30f_nlqrax.png' />
+                        <img src='http://res.cloudinary.com/flyakite/image/upload/q_60,h_648,w_648/v1515973002/f6177ff2a47408c67c2f4a556c52e30f_nlqrax.png' />
                         <h1>Rspec</h1>
                     </div>
             
