--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                     <h4>Artem Kharshan</h4>
                 </div>
                 <div>
-                    <span><h1>I want to Make things <h2> Work</h2></h1></span>
+                    <span><h1>I want to make things <h2> Work</h2></h1></span>
                     <br/>
                 <span><h1>and make things <h3> Better</h3></h1></span>
                 </div>
@@ -68,19 +68,18 @@
             </div>
         </main>
 
-        <span class='seperator' id='about'>ABOUT ME</span>
-        <main class='about-me' >
+        <span class='seperator' >ABOUT ME</span>
+        <main class='about-me' id='about'>
             <blockquote>
-                Mission-driven full stack developer with a get it done attitude and a passion for thoughful design 
+                Mission-driven full stack developer with a get it done attitude and a passion for thoughful design.
             </blockquote>
                 
             <p>As a web developer, I enjoy using my attention to detail, my unequivocal love for making things, and my driven work ethic
-                to improve lives and find new Solutions. 
+                to improve lives and find new solutions. 
             </p>
-            <br></br>
             <p>I've worked in Ruby, Javascript, HTML5/CSS3, Rails, React/Redux and Vue. if something needs to happen, I feel responsible
-            for getting it done, getting it right, and helping who I can in the process. I'm self motivated with a good strategic sense
-            of organization and a passion for my work but also thrive being delegated tasks to support my team. I believe in communication,
+            for getting it done and getting it right. I'm self motivated with a good sense
+            of strategic organization and a passion for my work but also thrive being delegated tasks to support my team. I believe in communication,
             negotiation, and an appreciation for the bigger picture of being partners trying to build the best we can.</p>    
             
             <h1>I want to make things that make a difference.</h1>
