fixed more links

--- a/public/index.html
+++ b/public/index.html
@@ -202,9 +202,9 @@
             <ul class='contact-list'>
                 
                 <br></br>
-                <li><i class="fa fa-github"></i><a href='#'> Github</a></li>
+                <li><i class="fa fa-github"></i><a href='https://github.com/snorkleboy'> Github</a></li>
                 <br></br>
-                <li><i class="fa fa-linkedin-square" ></i><a href='#'> LinkedIn</a></li>
+                <li><i class="fa fa-linkedin-square" ></i><a href='https://www.linkedin.com/in/artem-kharshan/'> LinkedIn</a></li>
                 <br></br>
                 <li><i class="fa fa-envelope"></i><a href='mailto:TimKharshan@hotmail.com'> TimKharshan@hotmail.com</a></li>
 
