--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Artem</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/icon.png">
+    <script type="text/javascript" src="smoothscroll.js"></script>
     <script src="https://use.fontawesome.com/5b61570599.js"></script>
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="application.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="projects.css">
